# novelAI

./: .gitignore  CLAUDE.md  README.md  novel-writing-system-plan.md  package.json  site.config.json
.github/workflows/: pages.yml
Data/: 【mx-xz站-場景與敘事技巧】.txt  【主題】.txt  【人物】.txt  【創作技巧】.txt  【寫作技巧懶人包】.txt  【對白】.txt  【小說】.txt  【幕綱】.txt  【戲劇手法】.txt  【故事】.txt  【獨門密技】.txt  【結局】.txt  【編劇結構】.txt  【靈感】.txt
Data/跨語言技巧/: _index.md  世界觀與設定.md  主題與題旨.md  人物與角色弧線.md  伏筆與反轉.md  對白.md  展示而非講述與描寫.md  氛圍與筆調.md  結構與節奏.md  網文類型專項.md  視角與人稱.md  開場與鉤子.md
examples/: README.md  download.py
examples/_分析/: _字詞級共通點.md  _跨書共通點.md  一世之尊.md  從紅月開始.md  我有一個修仙世界.md  (+3 more)
harry_potter/: README.md
site/: build.js  build.test.js
tools/derived_sync/: pyproject.toml
tools/derived_sync/src/derived_sync/: __init__.py  cli.py  core.py
tools/derived_sync/tests/: test_core.py
tools/state_projection/: pyproject.toml
tools/state_projection/src/state_projection/: __init__.py  cli.py  fold.py
tools/state_projection/tests/: test_cli.py  test_fold.py
情境測試/: skill覆蓋情境測試.md  端到端貫穿測試流程.md
技巧知識庫/: _index.md  世界觀與背景.md  主題題旨.md  伏筆與意外.md  修辭與字句鍛鍊.md  創作流程.md  動作場面寫作.md  因果法則.md  場景與情節推進.md  字詞句法與抗生硬.md  對白.md  展示而非講述與五感描寫.md  心理描寫.md  戲劇張力與懸念.md  故事本質與要素.md  敘事距離與DeepPOV.md  氛圍與筆調.md  畫面感與電影化.md  結局類型.md  結構公式.md  網文與文學取捨.md  視角與敘事人稱.md  角色塑造.md  選題與收斂.md  需求四象限.md
書本模板/: README.md
結構定義/: 世界觀.schema.md  共同約定.md  回饋記錄.schema.md  大綱.schema.md  就緒儀表.schema.md  幕綱.schema.md  摘要.schema.md  狀態事件流.schema.md  章節.schema.md  結構.schema.md  角色.schema.md  角色需求.schema.md  風格.schema.md
驗證範例/: beat-test報告.md
(+1333 files in other folders)
