[project]
name = "derived-sync"
version = "0.1.0"
description = "novelAI 結構定義：源→衍生 過期偵測（比對 .ai.md 的 generated-from hash，零 LLM、可覆算）"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
derived-sync = "derived_sync.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/derived_sync"]
