[project]
name = "state-projection"
version = "0.1.0"
description = "novelAI 子專案 C：狀態事件流 as-of 投影（fold，零 LLM、可覆算）"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
state-project = "state_projection.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/state_projection"]
